--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && lerna run i18n-sync && git add -A"
+      "pre-commit": "lint-staged && lerna run i18n-sync && git add docs/i18n.md"
     }
   },
   "lint-staged": {
